package composite;

interface FileSystemComponent {
    void display();
}
